--- a/commons/src/main/res/values-cy/strings.xml
+++ b/commons/src/main/res/values-cy/strings.xml
@@ -35,6 +35,11 @@
     <string name="no_access_to_contacts">The app could not access your contacts</string>
     <string name="insert_text_here">Insert text here</string>
 
+    <!-- View types -->
+    <string name="change_view_type">Change view type</string>
+    <string name="grid">Grid</string>
+    <string name="list">List</string>
+
     <!-- Blocked numbers -->
     <string name="manage_blocked_numbers">Rheoli rhifau wedi\'u rhwystro</string>
     <string name="not_blocking_anyone">Nid wyt yn rhwystro unrhyw un.</string>
