--- a/commons/src/main/res/values-iw/strings.xml
+++ b/commons/src/main/res/values-iw/strings.xml
@@ -35,6 +35,11 @@
     <string name="no_access_to_contacts">לא ניתן לגשת לאנשי הקשר</string>
     <string name="insert_text_here">הוספת טקסט</string>
 
+    <!-- View types -->
+    <string name="change_view_type">Change view type</string>
+    <string name="grid">Grid</string>
+    <string name="list">List</string>
+
     <!-- Blocked numbers -->
     <string name="manage_blocked_numbers">ניהול מספרים חסומים</string>
     <string name="not_blocking_anyone">אין חסימות</string>
