--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -35,6 +35,11 @@
     <string name="no_access_to_contacts">Nepodarilo sa získať zoznam kontaktov</string>
     <string name="insert_text_here">Zadajte text sem</string>
 
+    <!-- View types -->
+    <string name="change_view_type">Zmeniť typ zobrazenia</string>
+    <string name="grid">Mriežka</string>
+    <string name="list">Zoznam</string>
+
     <!-- Blocked numbers -->
     <string name="manage_blocked_numbers">Spravovať blokované čísla</string>
     <string name="not_blocking_anyone">Neblokujete nikoho.</string>
